--- a/app/src/main/res/xml/movie_settings.xml
+++ b/app/src/main/res/xml/movie_settings.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/title">
+    android:title="@string/settings_title">
 
     <EditTextPreference
-        android:defaultValue="@string/section"
-        android:inputType="text"
-        android:key="@string/section_name_key"
+        android:defaultValue="@string/settings_page_size_default"
+        android:inputType="numberDecimal"
+        android:key="@string/settings_page_size_key"
         android:selectAllOnFocus="true"
-        android:title="@string/article_section_label" />
+        android:title="@string/settings_page_size_label" />
 
     <ListPreference
-        android:defaultValue="@string/settings_publish_date_default"
-        android:entries="@array/settings_publish_date_labels"
-        android:entryValues="@array/settings_publish_date_values"
-        android:key="@string/article_date_key"
-        android:title="@string/settings_publish_date_label" />
+        android:defaultValue="@string/settings_order_by_default"
+        android:entries="@array/settings_order_by_labels"
+        android:entryValues="@array/settings_order_by_values"
+        android:key="@string/settings_order_by_key"
+        android:title="@string/settings_order_by_label" />
 
 </PreferenceScreen>
